--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,3 +367,61 @@
   .navbar-dark .navbar-text a {color: #fff;}
   .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {color: #fff;}
   /*End bootstrap grid*/
+
+a {color: #fff;}
+
+.flex-container{
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+
+/******** HEADER ********/
+#main-menu{
+  height: 72px;
+  background-color: #484848;
+}
+
+.top-logo {display: inline-block;}
+
+.top-logo img {
+  height: 52px;
+}
+
+/*#top-menu {width: 90%;}*/
+
+#top-menu-list>li { 
+  list-style: none;
+  display: inline-block; 
+}
+
+
+
+
+
+/******** FOOTER ********/
+#footer {background-color: #000;padding: 40px 0;}
+.rh-container-flex {display: flex !important;height: auto;}
+.logo-section {margin-right: 15px;}
+.footer-content {margin-left:15px;}
+.footer-links li {text-align: center !important;}
+.links-container {margin-bottom: 20px;}
+.links-container a:hover {color: #fff;}
+.links-container li {display: inline-block;list-style-type: none;padding: 0 10px;border-right: 2px solid rgb(102, 102, 102);}
+.links-container li:first-child {padding-left: 0 !important;}
+.links-container li:last-child {border-right: none;}
+.site-politics-info {font-weight: 700;}
+.site-politics-copy, .footer-bottom-section {font-size: 12px;}
+.footer-year {display: inline-block;width: auto;padding-right: 5px;border-right: 1px solid rgb(102, 102, 102);}
+.footer-url {display: inline-block;padding-left: 5px;}
+.footer-bottom-section {margin-top: 20px;}
+.footer-counters-section {margin-top: 20px;text-align: right;}
+.number-h2 {font-size: 22px;padding:4px; color:#83bc03; border:2px solid #83bc03; border-radius:20px; width:40px;display: inline-block;text-align:center; margin-right:10px;}
